# web_server_for_minecraft_server

./: .gitignore  main.py  pyproject.toml  run.bat  setup.py
src/: main.py
src/gui/: __init__.py  api_server_worker.py  open_server_widget.py
src/models/: __init__.py  models.py
src/router/: __init__.py  server_manager.py
src/templates/: index.html
src/util/: __init__.py  server_data.py  server_log.py
